tests/test-dirs/upstream-typing-recovery/original-tests/invalid_continuation_pattern.compilers.reference
File "invalid_continuation_pattern.ml", line 1:
Error: Multiple errors were encountered
File "invalid_continuation_pattern.ml", line 16, characters 14-17:
16 |   | effect A, [k] -> "bar"
                   ^^^
  Invalid continuation pattern: only variables and _ are allowed .
File "invalid_continuation_pattern.ml", line 22, characters 14-22:
22 |   | effect A, (Some k) -> "bar"
                   ^^^^^^^^
  Invalid continuation pattern: only variables and _ are allowed .
File "invalid_continuation_pattern.ml", line 26, characters 14-15:
26 | let u : int = t
                   ^
  The value t has type string but an expression was expected of type int
